--- a/index.html
+++ b/index.html
@@ -3,18 +3,173 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Dev</title>
-  <link rel="stylesheet" href="styles/index.css">
-
-<link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" 
-rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet" >
-<link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
+  
+  <title>Portfólio Dev</title>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+  <header>
+    <img src="./assets/Avatar.png" alt="ícone de perfil">
 
+    <div>
+      <h2>Hello World! Meu nome é <span>Martina Santos</span> e sou</h2>
+      <h1>Desenvolvedora Fullstack</h1>
+      <p>
+        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+      </p>
+    </div>
+
+    <ul>
+      <li>
+        <img src="./assets/icons/GitHub.svg" alt="ícone do GitHub">
+        <p>GitHub</p>
+      </li>
+
+      <li>
+        <img src="./assets/icons/HTML.svg" alt="ícone do GitHub">
+        <p>HTML</p>
+      </li>
+
+      <li>
+        <img src="./assets/icons/CSS.svg" alt="ícone do GitHub">
+        <p>CSS</p>
+      </li>
+
+      <li>
+        <img src="./assets/icons/JavaScript.svg" alt="ícone do GitHub">
+        <p>Javascript</p>
+      </li>
+
+      <li>
+        <img src="./assets/icons/React.svg" alt="ícone do GitHub">
+        <p>React</p>
+      </li>
+
+      <li>
+        <img src="./assets/icons/Nodejs.svg" alt="ícone do GitHub">
+        <p>Node.js</p>
+      </li>
+    </ul>
+
+    <img src="./assets/icons/CaretDoubleDown.svg" alt="">
+  </header>
+
+  <main>
+    <span>Meu trabalho</span>
+    <h3>Veja os projetos em destaque</h3>
+
+    <section>
+      <div id="card">
+        <img src="./assets/Images/Thumbnail_Project-01.png" alt="">
+        <strong>Travelgram</strong>
+        <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+      </div>
+
+      <div id="card">
+        <img src="./assets/Images/Thumbnail_Project-02.png" alt="">
+        <strong>Tech News</strong>
+        <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+      </div>
+
+      <div id="card">
+        <img src="./assets/Images/Thumbnail_Project-03.png" alt="">
+        <strong>Página de receita</strong>
+        <p>Página com o passo a passo de uma receita para cupcakes</p>
+      </div>
+
+      <div id="card">
+        <img src="./assets/Images/Thumbnail_Project-04.png" alt="">
+        <strong>Zingen</strong>
+        <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+      </div>
+
+      <div id="card">
+        <img src="./assets/Images/Thumbnail_Project-05.png" alt="">
+        <strong>Refund</strong>
+        <p>Um sistema para pedido e acompanhamento de reembolso </p>
+      </div>
+
+      <div id="card">
+        <img src="./assets/Images/Thumbnail_Project-06.png" alt="">
+        <strong>Página de turismo</strong>
+        <p>Página com as principais informações para quem quer viajar para Busan</p>
+      </div>
+    </section>
+  </main>
+  
+  <aside>
+    <span>Meus serviços</span>
+    <h3>Como posso ajudar o seu negócio</h3>
+
+    <section>
+      <div class="card-3">
+        <img src="./assets/icons/Devices.svg" alt="">
+        <strong>Websites e Aplicativos</strong>
+        <p>Desenvolvimento de interfaces</p>
+      </div>
+
+      <div class="card-3">
+        <img src="./assets/icons/HardDrives.svg" alt="">
+        <strong>API e banco de dados</strong>
+        <p>Criação de serviços do sistema</p>
+      </div>
+
+      <div class="card-3">
+        <img src="./assets/icons/Infinity.svg" alt="">
+        <strong>DevOps</strong>
+        <p>Gestão e infraestrutura da aplicação</p>
+      </div>
+    </section>
+  </aside>
+
+  <footer>
+    <div>
+      <span>Contatos</span>
+      <h3>Gostou do meu trabalho?</h3>
+      <p>
+        Entre em contato ou acompanhe as minhas redes sociais!
+      </p>
+    </div>
+
+    <section class="contacts">
+      <a href="#" class="button">
+        <div class="social">
+          <img src="./assets/icons/InstagramLogo.svg" alt="">
+          <span>Instagram</span>
+        </div>
+        <img src="./assets/icons/ArrowUpRight.svg" alt="">
+      </a>
+
+      <a href="#" class="button">
+        <div class="social">
+          <img src="./assets/icons/LinkedinLogo.svg" alt="">
+          <span>Linkedin</span>
+        </div>
+        <img src="./assets/icons/ArrowUpRight.svg" alt="">
+      </a>
+
+      <a href="#" class="button">
+        <div class="social">
+          <img src="./assets/icons/GithubLogo.svg" alt="">
+          <span>GitHub</span>
+        </div>
+        <img src="./assets/icons/ArrowUpRight.svg" alt="">
+      </a>
+
+      <a href="#" class="button">
+        <div class="social">
+          <img src="./assets/icons/EnvelopeSimple.svg" alt="">
+          <span>E-mail</span>
+        </div>
+        <img src="./assets/icons/ArrowUpRight.svg" alt="">
+      </a>
+
+    </section>
+  </footer>
 </body>
 </html>
