--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <img src="./assets/Avatar.png" alt="ícone de perfil">
+    <img src="./assets/Images/Avatar.png" alt="ícone de perfil">
 
     <div>
       <h2>Hello World! Meu nome é <span>Martina Santos</span> e sou</h2>
@@ -137,7 +137,7 @@
     </div>
 
     <section class="contacts">
-      <a href="#" class="button">
+      <a href="https://www.instagram.com/" class="button">
         <div class="social">
           <img src="./assets/icons/InstagramLogo.svg" alt="">
           <span>Instagram</span>
@@ -145,7 +145,7 @@
         <img src="./assets/icons/ArrowUpRight.svg" alt="">
       </a>
 
-      <a href="#" class="button">
+      <a href="https://br.linkedin.com/?src=go-pa&trk=sem-ga_campid.12619604099_asid.149519181115_crid.657343811713_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.9197548&mcid=6821526239111716925&cid=&gad_source=1&gclid=EAIaIQobChMItvOpoM7hiAMVzVdIAB0NSwA1EAAYASAAEgLjLvD_BwE&gclsrc=aw.ds" class="button">
         <div class="social">
           <img src="./assets/icons/LinkedinLogo.svg" alt="">
           <span>Linkedin</span>
@@ -153,7 +153,7 @@
         <img src="./assets/icons/ArrowUpRight.svg" alt="">
       </a>
 
-      <a href="#" class="button">
+      <a href="https://github.com/" class="button">
         <div class="social">
           <img src="./assets/icons/GithubLogo.svg" alt="">
           <span>GitHub</span>
